// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`style attribute css transforms with postcss mark transform 1`] = `
<div>
  <p>
    <strong>
      Paragraph
    </strong>
  </p>
</div>
`;

exports[`style attribute css transforms with postcss mark transforms on multiple marks 1`] = `
<div>
  <p>
    This is editable 
    <strong>
      rich
    </strong>
     text, 
    <i>
      much
    </i>
     better than a 
    <pre>
      &lt;textarea&gt;
    </pre>
    !
  </p>
</div>
`;

exports[`style attribute css transforms with postcss p tag element transform 1`] = `
<div>
  <p>
    <strong>
      Paragraph
    </strong>
  </p>
</div>
`;
